objects/LCRM_Qualifying_Product__c.object
<CustomObject>
    <fields>
        <fullName>LCRM_Active_Standing_Order__c</fullName>
        <label>Active Standing Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LCRM_Customer_Billed_To__c</fullName>
        <label>Customer Billed To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Customer_Shipped_To__c</fullName>
        <label>Customer Shipped To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Lapsed_Date__c</fullName>
        <label>Lapsed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LCRM_Lead_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Name</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Qualifying Products</relationshipLabel>
        <relationshipName>Qualifying_Products_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Material__c</fullName>
        <formula>LCRM_Product_Name__r.ProductCode</formula>
        <label>Material #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Previously_Purchased_Amount__c</fullName>
        <label>Previously Purchased Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Category__c</fullName>
        <formula>LCRM_Product_Name__r.LCRM_Product_Category__c</formula>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Qualifying Products</relationshipLabel>
        <relationshipName>Qualifying_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Type__c</fullName>
        <formula>LCRM_Product_Name__r.LCRM_Product_Type__c</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Purchased_Date__c</fullName>
        <label>Purchased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LCRM_Quantity_Previously_Purchased__c</fullName>
        <label>Quantity Previously Purchased</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LCRM_Selection_Criteria__c</fullName>
        <label>Selection Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LCRM_Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Qualifying Product</label>
    <nameField>
        <displayFormat>QP-{00000}</displayFormat>
        <label>Qualifying Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualifying Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>